# Voice-AI-Memory-Prototype

./: .env.example  .gitignore  ARCHITECTURE_WHITEPAPER.html  ARCHITECTURE_WHITEPAPER.md  DEPLOY.md  Makefile  README.md  agent.py  audio_capture.py  config.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-rich.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
archive/: .env.example  docker-compose.yml
archive/backend/: pyproject.toml
archive/backend/app/: main.py  metrics.py  webui.py
archive/backend/app/engines/: cascade.py
archive/backend/app/memory/: contradiction.py  paralinguistics.py  precall.py  schemas.py
archive/backend/app/pb/: __init__.py
archive/backend/app/providers/: factory.py  llm_openai.py  stt_elevenlabs.py  stt_openai.py  stt_ringg.py
archive/backend/app/telephony/: twilio_protocol.py
archive/backend/app/workers/: postcall.py
archive/backend/tests/: sim_twilio.py  test_barge_in.py  test_chunker.py  test_contradiction.py  test_paralinguistics.py  test_providers.py
archive/docs/: architecture.md
archive/proto/: orchestrator.proto
archive/scheduler/internal/config/: config.go
archive/scheduler/internal/grpcclient/: client.go
archive/scheduler/internal/httpapi/: middleware.go
archive/scheduler/internal/scheduler/: fairshare.go  fairshare_test.go  tokens.go
backend/: Dockerfile
backend/app/: __init__.py  config.py  grpc_server.py  logging.py
backend/app/engines/: base.py  realtime.py
backend/app/memory/: affective.py  store.py
backend/app/providers/: stt_base.py  stt_deepgram.py  tts_elevenlabs.py
backend/app/static/: index.html
backend/app/telephony/: audio.py
backend/app/vad/: turn.py
backend/sql/: init.sql
backend/tests/: test_audio.py  test_session.py  test_twilio_protocol.py  util.py
docs/: latency-budget.md
frontend/: build.sh
memory/: __init__.py  acoustic_engine.py  graph_engine.py  post_call.py  pre_call.py  prosody.py  schemas.py
notebooks/: Paralinguistic_Extractor.ipynb
scheduler/: Dockerfile  go.mod
scheduler/cmd/scheduler/: main.go
scheduler/internal/httpapi/: twilio_webhook.go
scheduler/internal/twiml/: twiml.go
scripts/: seed_demo.py  verify_demo.py
tests/: test_acoustic_engine.py  test_audio_capture.py  test_graph_engine_integration.py  test_graph_engine_pure.py  test_post_call.py  test_pre_call.py  test_prosody.py
web/: server.py
web/static/: index.html
