[project]
name = "livekit-cognitive-agent"
version = "0.1.0"
description = "LiveKit voice agent with Neo4j cognitive memory, librosa+SenseVoice acoustic engine, and trust-weighted contradiction detection."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]   # we wrap long lines by hand where it helps

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true   # third-party (livekit, neo4j, librosa, structlog) lack inline stubs
exclude = "archive/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
